@@ -47,6 +47,7 @@ import com.skapp.community.peopleplanner.model.Team;
 import com.skapp.community.peopleplanner.model.Team_;
 import com.skapp.community.peopleplanner.type.AccountStatus;
 import com.skapp.community.peopleplanner.type.LeaveCycleConfigField;
+import com.skapp.community.peopleplanner.util.PeopleUtil;
 import com.skapp.community.timeplanner.model.TimeConfig;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.TypedQuery;
@@ -69,6 +70,7 @@ import org.springframework.util.CollectionUtils;
 
 import java.time.DayOfWeek;
 import java.time.LocalDate;
+import java.time.temporal.TemporalAdjusters;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -78,9 +80,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import static com.skapp.community.leaveplanner.util.LeaveModuleUtil.getLeaveCycleEndYear;
-import static com.skapp.community.peopleplanner.util.PeopleUtil.getSearchString;
 
 @Component
 @RequiredArgsConstructor
@@ -95,7 +94,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 	public static List<LocalDate> getAllDaysBetween(DayOfWeek day, LocalDate startDate, LocalDate endDate) {
 		List<LocalDate> removingDays = new ArrayList<>();
 
-		LocalDate currentDay = startDate.with(java.time.temporal.TemporalAdjusters.nextOrSame(day));
+		LocalDate currentDay = startDate.with(TemporalAdjusters.nextOrSame(day));
 
 		while (!currentDay.isAfter(endDate)) {
 			removingDays.add(currentDay);
@@ -679,7 +678,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 					.get(LeaveCycleConfigField.DATE.getField())
 					.intValue();
 
-				int leaveCycleEndYear = getLeaveCycleEndYear(startMonth - 1, startDate);
+				int leaveCycleEndYear = LeaveModuleUtil.getLeaveCycleEndYear(startMonth - 1, startDate);
 
 				if (leaveRequestFilterDto.getStartDate() == null) {
 					leaveRequestFilterDto.setStartDate(DateTimeUtils.getUtcLocalDate(
@@ -935,8 +934,13 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 		List<Predicate> predicates = new ArrayList<>();
 
 		Join<LeaveRequest, Employee> employee = root.join(LeaveRequest_.employee);
+		Join<Employee, User> user = employee.join(Employee_.user);
 		Join<Employee, EmployeeManager> employeeManager = employee.join(Employee_.employeeManagers);
 		Join<EmployeeManager, Employee> manager = employeeManager.join(EmployeeManager_.manager);
+
+		predicates.add(criteriaBuilder.equal(user.get(User_.isActive), true));
+		predicates.add(criteriaBuilder
+			.not(employee.get(Employee_.ACCOUNT_STATUS).in(AccountStatus.TERMINATED, AccountStatus.DELETED)));
 
 		predicates.add(criteriaBuilder.equal(manager.get(Employee_.employeeId), managerEmployeeId));
 		predicates.add(criteriaBuilder.equal(root.get(LeaveRequest_.status), LeaveRequestStatus.PENDING));
@@ -1065,7 +1069,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 	private Predicate findByEmailName(String keyword, CriteriaBuilder criteriaBuilder,
 			Join<LeaveRequest, Employee> employee, Join<Employee, User> userJoin) {
-		keyword = getSearchString(keyword);
+		keyword = PeopleUtil.getSearchString(keyword);
 		return criteriaBuilder.or(
 				criteriaBuilder.like(criteriaBuilder
 					.lower(criteriaBuilder.concat(criteriaBuilder.concat(employee.get(Employee_.FIRST_NAME), " "),
@@ -1089,7 +1093,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 				}
 			}
 			return holidayDates == null || !holidayDates.contains(date);
-		}).collect(Collectors.toList());
+		}).toList();
 
 		List<LeaveTrendByDay> result = new ArrayList<>();
 
@@ -1145,7 +1149,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 				}
 			}
 			return holidayDates == null || !holidayDates.contains(date);
-		}).collect(Collectors.toList());
+		}).toList();
 
 		Map<Integer, Set<Long>> employeesByMonth = new HashMap<>();
 
@@ -1199,7 +1203,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 			LocalDate startDate, LocalDate endDate, List<Long> typeIds, List<Long> teamIds) {
 		CriteriaBuilder cb = entityManager.getCriteriaBuilder();
 
-		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1)).collect(Collectors.toList());
+		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1)).toList();
 
 		Map<String, Double> leaveCountsByTypeAndMonth = new HashMap<>();
 
@@ -1238,7 +1242,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 				predicates.add(leaveType.get(LeaveType_.typeId).in(typeIds));
 			}
 
-			if (teamIds != null && !teamIds.isEmpty()) {
+			if (teamIds != null && !teamIds.isEmpty() && employeeTeam != null) {
 				predicates.add(employeeTeam.get(EmployeeTeam_.team).get(Team_.teamId).in(teamIds));
 			}
 
@@ -1302,7 +1306,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1))
 			.filter(date -> isValidLeaveDate(date, workingDaysIndex, holidayDates))
-			.collect(Collectors.toList());
+			.toList();
 
 		Map<String, Float> leaveCountsByTypeAndMonth = new HashMap<>();
 
@@ -1399,7 +1403,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1))
 			.filter(date -> isValidWorkingDay(date, workingDaysIndex, holidayDates))
-			.collect(Collectors.toList());
+			.toList();
 
 		Map<String, Float> leaveCountsByTypeAndMonth = new HashMap<>();
 
@@ -1477,8 +1481,10 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 	}
 
 	private boolean isValidWorkingDay(LocalDate date, List<Integer> workingDaysIndex, List<LocalDate> holidayDates) {
-		if (holidayDates != null && holidayDates.contains(date) && !holidayDates.isEmpty()) {
-			return false;
+		if (holidayDates != null && !holidayDates.isEmpty()) {
+			if (holidayDates.contains(date)) {
+				return false;
+			}
 		}
 
 		if (workingDaysIndex != null && !workingDaysIndex.isEmpty()) {
@@ -1496,7 +1502,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1))
 			.filter(date -> isValidWorkingDay(date, workingDays, holidayDates))
-			.collect(Collectors.toList());
+			.toList();
 
 		Map<String, Float> leaveCountsByTypeAndMonth = new HashMap<>();
 
@@ -1684,7 +1690,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1))
 			.filter(date -> isValidWorkingDay(date, workingDaysIndex, holidayDates))
-			.collect(Collectors.toList());
+			.toList();
 
 		float totalLeaveCount = 0.0f;
 
@@ -1728,7 +1734,7 @@ public class LeaveRequestRepositoryImpl implements LeaveRequestRepository {
 
 		List<LocalDate> allDates = startDate.datesUntil(endDate.plusDays(1))
 			.filter(date -> isValidWorkingDay(date, workingDays, holidayDates))
-			.collect(Collectors.toList());
+			.toList();
 
 		Map<Integer, Float> leaveCountsByType = new HashMap<>();
 
